
[package]
name = "transientdb"
version = "0.1.6"
edition = "2021"
authors = ["Sovran.la <support@sovran.la>"]
description = "A lightweight, thread-safe temporary data storage system designed for efficient handling of transient data in Rust applications"
repository = "https://github.com/sovran-rs/transientdb"
license = "MIT"
readme = "README.md"
keywords = ["database", "storage", "temporary", "thread-safe"]
categories = ["database"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
toml_edit = "0.22"

[dev-dependencies]
tempfile = "3.14.0"
rand = "0.9.0-alpha.2"

[[bin]]
name = "release"
path = "tools/release.rs"
